Moved NPC model to Models

--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -10,6 +10,7 @@
         <th>Full Name</th>
         <th>Species</th>
         <th>Gender</th>
+        <th>Marital Status</th>
         <th>Profession</th>
         <th>Culture</th>
     </thead>
@@ -20,6 +21,7 @@
             <td>@npc.FullName()</td>
             <td>@npc.Species</td>
             <td>@npc.Gender</td>
+            <td>@npc.MaritalStatus</td>
             <td>@npc.Profession</td>
             <td>@npc.Culture</td>
         </tr>
