Basic physical descriptions.

--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -13,6 +13,7 @@
         <th>Gender</th>
         <th>Marital Status</th>
         <th>Profession</th>
+        <th>Physical Description</th>
     </thead>
     <tbody>
 
@@ -23,6 +24,7 @@
             <td>@npc.Gender</td>
             <td>@npc.MaritalStatus</td>
             <td>@npc.Profession</td>
+            <td>@npc.PhysicalDescription.Build</td>
         </tr>
     }
     </tbody>
